--- a/package.json
+++ b/package.json
@@ -4,26 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors",
-    "build": "webpack --progress --colors -p"
+    "start": "webpack-dev-server --progress --colors --hot --define process.env.NODE_ENV='\"development\"'",
+    "build": "rm -rf ./dist && export NODE_ENV='production' && webpack --progress --colors -p",
+    "help": "webpack-dev-server -h && webpack -h"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.5.0",
-    "sass-loader": "^6.0.2",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.2.1"
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.3",
+    "sass-resources-loader": "^1.2.1",
+    "style-loader": "^0.17.0",
+    "webpack": "^2.5.0"
   }
 }
